<resources>
    <string name="title_activity_nuovo_profilo">Sign in</string>
        <string name="title_activity_login_activity_test">Sign in</string>
        <string name="title_activity_login">Sign in</string>
        <string name="title_activity_to_remove">Sign in</string>
    <string name="tempo_minimo">Tempo Minimo</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="app_name">Navigation Drawer Example</string>
    <string-array name="menu_voice">
        <item>Nuova Sfida</item>
        <item>Riepilogo Sfide</item>
        <item>Profilo</item>
        <item>Leaderboard</item>
            </string-array>
    <string name="saved_weight">aaa</string>
    <string name="saved_height">bbb</string>
    <string name="saved_Birth_Day">ccc</string>
    <string name="saved_Birth_Month">ddd</string>
    <string name="saved_Birth_Year">eee</string>
    <string name="saved_Sex">fff</string>
    <string name="saved_Password">gggg</string>
    <string name="saved_Email">hhhh</string>
    <string name="saved_Nickname">iiiii</string>
    <string name="saved_Remember_me">bolh</string>
     <string name="login">Accedi</string>
    <string name="remember_me">Ricordati</string>
    <string name="register">Registrati</string>
   <string name="nickname">Nickname</string>
   <string name="nome">Nome</string>
    <string name="change">Modifica</string>
    <string name="birth_date">Data di nascita</string>
    <string name="sex">Sesso</string>
    <string name="male">Uomo</string>
    <string name="female">Donna</string>
    <string name="height">Altezza</string>
    <string name="WeightGoal">Obiettivo Peso</string>
     <string name="weight">Peso</string>
   <string name="drawer_open">Open navigation drawer</string>
    <string name="saved_high_score">prova</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string-array  name="weigth_array">
        
        <item>	40	Kg	</item>
 <item>	41	Kg	</item>
 <item>	42	Kg	</item>
 <item>	43	Kg	</item>
 <item>	44	Kg	</item>
 <item>	45	Kg	</item>
 <item>	46	Kg	</item>
 <item>	47	Kg	</item>
 <item>	48	Kg	</item>
 <item>	49	Kg	</item>
 <item>	50	Kg	</item>
 <item>	51	Kg	</item>
 <item>	52	Kg	</item>
 <item>	53	Kg	</item>
 <item>	54	Kg	</item>
 <item>	55	Kg	</item>
 <item>	56	Kg	</item>
 <item>	57	Kg	</item>
 <item>	58	Kg	</item>
 <item>	59	Kg	</item>
 <item>	60	Kg	</item>
 <item>	61	Kg	</item>
 <item>	62	Kg	</item>
 <item>	63	Kg	</item>
 <item>	64	Kg	</item>
 <item>	65	Kg	</item>
 <item>	66	Kg	</item>
 <item>	67	Kg	</item>
 <item>	68	Kg	</item>
 <item>	69	Kg	</item>
 <item>	70	Kg	</item>
 <item>	71	Kg	</item>
 <item>	72	Kg	</item>
 <item>	73	Kg	</item>
 <item>	74	Kg	</item>
 <item>	75	Kg	</item>
 <item>	76	Kg	</item>
 <item>	77	Kg	</item>
 <item>	78	Kg	</item>
 <item>	79	Kg	</item>
 <item>	80	Kg	</item>
 <item>	81	Kg	</item>
 <item>	82	Kg	</item>
 <item>	83	Kg	</item>
 <item>	84	Kg	</item>
 <item>	85	Kg	</item>
 <item>	86	Kg	</item>
 <item>	87	Kg	</item>
 <item>	88	Kg	</item>
 <item>	89	Kg	</item>
 <item>	90	Kg	</item>
 <item>	91	Kg	</item>
 <item>	92	Kg	</item>
 <item>	93	Kg	</item>
 <item>	94	Kg	</item>
 <item>	95	Kg	</item>
 <item>	96	Kg	</item>
 <item>	97	Kg	</item>
 <item>	98	Kg	</item>
 <item>	99	Kg	</item>
 <item>	100	Kg	</item>
 <item>	101	Kg	</item>
 <item>	102	Kg	</item>
 <item>	103	Kg	</item>
 <item>	104	Kg	</item>
 <item>	105	Kg	</item>
 <item>	106	Kg	</item>
 <item>	107	Kg	</item>
 <item>	108	Kg	</item>
 <item>	109	Kg	</item>
 <item>	110	Kg	</item>
 <item>	111	Kg	</item>
 <item>	112	Kg	</item>
 <item>	113	Kg	</item>
 <item>	114	Kg	</item>
 <item>	115	Kg	</item>
 <item>	116	Kg	</item>
 <item>	117	Kg	</item>
 <item>	118	Kg	</item>
 <item>	119	Kg	</item>
 <item>	120	Kg	</item>
 <item>	121	Kg	</item>
 <item>	122	Kg	</item>
 <item>	123	Kg	</item>
 <item>	124	Kg	</item>
 <item>	125	Kg	</item>
 <item>	126	Kg	</item>
 <item>	127	Kg	</item>
 <item>	128	Kg	</item>
 <item>	129	Kg	</item>
 <item>	130	Kg	</item>
 <item>	131	Kg	</item>
 <item>	132	Kg	</item>
 <item>	133	Kg	</item>
 <item>	134	Kg	</item>
 <item>	135	Kg	</item>
 <item>	136	Kg	</item>
 <item>	137	Kg	</item>
 <item>	138	Kg	</item>
 <item>	139	Kg	</item>
 <item>	140	Kg	</item>
 <item>	141	Kg	</item>
 <item>	142	Kg	</item>
 <item>	143	Kg	</item>
 <item>	144	Kg	</item>
 <item>	145	Kg	</item>
 <item>	146	Kg	</item>
 <item>	147	Kg	</item>
 <item>	148	Kg	</item>
 <item>	149	Kg	</item>
 <item>	150	Kg	</item>
        
        
        
    </string-array>
    <string-array name="height_array">
         <item>	120	cm	</item>
 <item>	121	cm	</item>
 <item>	122	cm	</item>
 <item>	123	cm	</item>
 <item>	124	cm	</item>
 <item>	125	cm	</item>
 <item>	126	cm	</item>
 <item>	127	cm	</item>
 <item>	128	cm	</item>
 <item>	129	cm	</item>
 <item>	130	cm	</item>
 <item>	131	cm	</item>
 <item>	132	cm	</item>
 <item>	133	cm	</item>
 <item>	134	cm	</item>
 <item>	135	cm	</item>
 <item>	136	cm	</item>
 <item>	137	cm	</item>
 <item>	138	cm	</item>
 <item>	139	cm	</item>
 <item>	140	cm	</item>
 <item>	141	cm	</item>
 <item>	142	cm	</item>
 <item>	143	cm	</item>
 <item>	144	cm	</item>
 <item>	145	cm	</item>
 <item>	146	cm	</item>
 <item>	147	cm	</item>
 <item>	148	cm	</item>
 <item>	149	cm	</item>
 <item>	150	cm	</item>
 <item>	151	cm	</item>
 <item>	152	cm	</item>
 <item>	153	cm	</item>
 <item>	154	cm	</item>
 <item>	155	cm	</item>
 <item>	156	cm	</item>
 <item>	157	cm	</item>
 <item>	158	cm	</item>
 <item>	159	cm	</item>
 <item>	160	cm	</item>
 <item>	161	cm	</item>
 <item>	162	cm	</item>
 <item>	163	cm	</item>
 <item>	164	cm	</item>
 <item>	165	cm	</item>
 <item>	166	cm	</item>
 <item>	167	cm	</item>
 <item>	168	cm	</item>
 <item>	169	cm	</item>
 <item>	170	cm	</item>
 <item>	171	cm	</item>
 <item>	172	cm	</item>
 <item>	173	cm	</item>
 <item>	174	cm	</item>
 <item>	175	cm	</item>
 <item>	176	cm	</item>
 <item>	177	cm	</item>
 <item>	178	cm	</item>
 <item>	179	cm	</item>
 <item>	180	cm	</item>
 <item>	181	cm	</item>
 <item>	182	cm	</item>
 <item>	183	cm	</item>
 <item>	184	cm	</item>
 <item>	185	cm	</item>
 <item>	186	cm	</item>
 <item>	187	cm	</item>
 <item>	188	cm	</item>
 <item>	189	cm	</item>
 <item>	190	cm	</item>
 <item>	191	cm	</item>
 <item>	192	cm	</item>
 <item>	193	cm	</item>
 <item>	194	cm	</item>
 <item>	195	cm	</item>
 <item>	196	cm	</item>
 <item>	197	cm	</item>
 <item>	198	cm	</item>
 <item>	199	cm	</item>
 <item>	200	cm	</item>
 <item>	201	cm	</item>
 <item>	202	cm	</item>
 <item>	203	cm	</item>
 <item>	204	cm	</item>
 <item>	205	cm	</item>
 <item>	206	cm	</item>
 <item>	207	cm	</item>
 <item>	208	cm	</item>
 <item>	209	cm	</item>
 <item>	210	cm	</item>
 <item>	211	cm	</item>
 <item>	212	cm	</item>
 <item>	213	cm	</item>
 <item>	214	cm	</item>
 <item>	215	cm	</item>
 <item>	216	cm	</item>
 <item>	217	cm	</item>
 <item>	218	cm	</item>
 <item>	219	cm	</item>
 <item>	220	cm	</item>
 <item>	221	cm	</item>
 <item>	222	cm	</item>
 <item>	223	cm	</item>
 <item>	224	cm	</item>
 <item>	225	cm	</item>
 <item>	226	cm	</item>
 <item>	227	cm	</item>
 <item>	228	cm	</item>
 <item>	229	cm	</item>
 <item>	230	cm	</item>
        
        
        
    </string-array>
     <string-array name="frequenza_array">
         <item>1 volta a settimana</item>
         <item>2 volta a settimana</item>
         <item>3 volta a settimana</item>
         <item>4 volta a settimana</item>
         <item>5 volta a settimana</item>
         <item>6 volta a settimana</item>
         <item>tutti i giorni</item>       
         </string-array>
      <string-array name="distanza_array">
           <item>1 km</item>
        <item>1,5 km</item>
        <item>2 km</item>
        <item>2,5 km</item>
        <item>3 km</item>
        <item>3,5 km</item>
        <item>4 km</item>
        <item>4,5 km</item>
        <item>5 km</item>
        <item>5,5 km</item>
        <item>6 km</item>
        <item>6,5 km</item>
        <item>7 km</item>
                <item>7,5 km</item>
                <item>8 km</item>
                        <item>8,5 km</item>
                        <item>9 km</item>
                                <item>9,5 km</item>
                                <item>10 km</item>
                                        <item>10,5 km</item>
                                         <item>11 km</item>
                                          <item>11,5 km</item>
                                           <item>12 km</item>
                                       
</string-array>
       <string-array name="periodo_array">
         <item>per 1 settimana</item>
              <item>per 2 settimane</item>
      <item>per 3 settimane</item>
      <item>per 1 mese</item>
 
   </string-array>
        <string name="frequenza">Frequenza</string>
               <string name="frequenza_spinner">Frequenza</string>
     <string name="periodo">Periodo</string>
     <string name="periodo_spinner">Periodo spinner</string>
     <string name="distanza_minima">Distanza Minima</string>
     <string name="tempo_minimo_spinner">Tempo Minimo spinner</string>
        <string name="scommessa">Scommessa</string>
     		              <string name="scommetti">Scommetti</string>
     		              <string name="quantita_scommessa">Scommetti2</string>
     <string name="x">x</string>
     <string name="quota">quota</string>
      <string name="uguale">uguale</string>
      <string name="risultato">Risultato</string>
      <string name="scommetti_button">Scommetti bottone</string>
     <string name="profilo">Profilo</string>
     <string name="peso">Situazione Peso</string>
     <string name="nuove_sfide">Nuove Sfide</string>
     <string name="sfide_in_corso">Sfide In Corso</string>
     <string name="sfide_vinte">Sfide Vinte</string>
    <string name="sfide_perse">Sfide Perse</string>
    <string name="bici">Bici</string>
    <string name="palestra">Palestra</string>
    <string name="corsa">Corsa</string>
  <string name="activity_type_airplane"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for airplane.">
    airplane
  </string>
  <string name="activity_type_atv"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for ATV (All Terrain Vehicles).">
    ATV
  </string>
  <string name="activity_type_biking"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for biking.">
    biking
  </string>
  <string name="activity_type_blimp"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for blimp.">
    blimp
  </string>
  <string name="activity_type_boat"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for boat.">
    boat
  </string>
</resources>