<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">
    
    <ScrollView
        android:id="@+id/nuova_corsa"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/frequenza"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/frequenza"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <Spinner
                        android:id="@+id/frequenza_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                     android:layout_weight="0.5"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/periodo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/periodo"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <Spinner
                        android:id="@+id/periodo_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/distanza_minima"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/distanza_minima"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <Spinner
                        android:id="@+id/distanza_minima_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/scommessa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/quantita_scommessa"
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal" >

                    <requestFocus />
                </EditText>

                <TextView
                    android:id="@+id/x"
                    android:layout_width="29dp"
                    android:layout_height="wrap_content"
                    android:text="@string/x"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/quota"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:text="1.0"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/uguale"
                    android:layout_width="27dp"
                    android:layout_height="wrap_content"
                    android:text="="
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/risultato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <Button
                android:id="@+id/scommetti_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/scommetti" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>